# testing

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Expr.g4  InterpreterVisitor.cpp  InterpreterVisitor.h  LICENSE  Makefile  NewExprVisitor.cpp  NewExprVisitor.h  README.md  build.sh  cmake_install.cmake  compose.yaml  demo  driver.cpp  example_short.cpp  input.txt  main.cpp
Antlr_files/: README.md  input.txt
Antlr_files/Include/: IRVisitor.h  Printable.h
Antlr_files/Sources/: IRVisitor.cpp
Antlr_files/cmake/: ExternalAntlr4Cpp.cmake
DFA_files/: README.md
DFA_files/include/: DFA_Forest.h  REGTree.h  REG_to_NFA.h  State.h  Token.h
DFA_files/src/: NFA.cpp
DFA_files/tests/: CMakeLists.txt  test_REGTree.cpp  test_dfa_forest.cpp  test_remove_eps.cpp  test_scanner.cpp  test_tokens.cpp
Include/: IRVisitor.h  InterpreterVisitor.h  NewExprVisitor.h  PrintVisitor.h  Printable.h  StackMemory.h
Project/: CMakeLists.txt  driver.cpp
Sources/: CMakeLists.txt  IRVisitor.cpp  InterpreterVisitor.cpp  PrintVisitor.cpp  Printable.cpp  StackMemory.cpp
antlr4_runtime/tmp/: antlr4_runtime-gitclone.cmake  antlr4_runtime-gitupdate.cmake
include/: DFA.h  DFA_Forest.h  FSA.cpp  FSA.h  NFA.h  NFA_to_DFA.h  REGTree.h  REGTree.hpp  Scanner.h  State.h  Token.h  Transition.h  UniqueObject.h
src/: CMakeLists.txt  DFA.cpp  DFA_Forest.cpp  FSA.cpp  NFA.cpp  NFA_to_DFA.cpp  REGTree.cpp  REG_to_NFA.cpp  Scanner.cpp  State.cpp  Token.cpp  Transition.cpp  UniqueObject.cpp
tests/: CMakeLists.txt  test.cpp  test_DFA.cpp  test_Merge.cpp  test_NFA.cpp  test_NFAtoDFA.cpp  test_REGTree.cpp  test_REGtoNFA.cpp  test_build.cpp  test_dfa_forest.cpp  test_remove_eps.cpp  test_scanner.cpp  test_tokens.cpp
