include(CTest)

include_directories(${PROJECT_SOURCE_DIR}/include)
include_directories(${PROJECT_SOURCE_DIR}/src)

set (EXECUTABLE_OUTPUT_PATH exec)
add_executable(test_state test.cpp ${PROJECT_SOURCE_DIR}/src/FSA.cpp ${PROJECT_SOURCE_DIR}/include/FSA.h ${PROJECT_SOURCE_DIR}/src/NFA.cpp ${PROJECT_SOURCE_DIR}/include/NFA.h ${PROJECT_SOURCE_DIR}/src/DFA.cpp ${PROJECT_SOURCE_DIR}/include/DFA.h ${PROJECT_SOURCE_DIR}/src/State.cpp ${PROJECT_SOURCE_DIR}/include/State.h ${PROJECT_SOURCE_DIR}/src/Transition.cpp ${PROJECT_SOURCE_DIR}/include/Transition.h  ${PROJECT_SOURCE_DIR}/src/UniqueObject.cpp ${PROJECT_SOURCE_DIR}/include/UniqueObject.h)
add_executable(test_nfa test_NFA.cpp ${PROJECT_SOURCE_DIR}/src/FSA.cpp ${PROJECT_SOURCE_DIR}/include/FSA.h ${PROJECT_SOURCE_DIR}/src/NFA.cpp ${PROJECT_SOURCE_DIR}/include/NFA.h ${PROJECT_SOURCE_DIR}/src/DFA.cpp ${PROJECT_SOURCE_DIR}/include/DFA.h ${PROJECT_SOURCE_DIR}/src/State.cpp ${PROJECT_SOURCE_DIR}/include/State.h ${PROJECT_SOURCE_DIR}/src/Transition.cpp ${PROJECT_SOURCE_DIR}/include/Transition.h  ${PROJECT_SOURCE_DIR}/src/UniqueObject.cpp ${PROJECT_SOURCE_DIR}/include/UniqueObject.h)
add_executable(test_build test_build.cpp ${PROJECT_SOURCE_DIR}/src/FSA.cpp ${PROJECT_SOURCE_DIR}/include/FSA.h ${PROJECT_SOURCE_DIR}/src/NFA.cpp ${PROJECT_SOURCE_DIR}/include/NFA.h ${PROJECT_SOURCE_DIR}/src/DFA.cpp ${PROJECT_SOURCE_DIR}/include/DFA.h ${PROJECT_SOURCE_DIR}/src/State.cpp ${PROJECT_SOURCE_DIR}/include/State.h ${PROJECT_SOURCE_DIR}/src/Transition.cpp ${PROJECT_SOURCE_DIR}/include/Transition.h  ${PROJECT_SOURCE_DIR}/src/UniqueObject.cpp ${PROJECT_SOURCE_DIR}/include/UniqueObject.h)
add_executable(test_regtree test_REGTree.cpp ${PROJECT_SOURCE_DIR}/src/REGTree.cpp ${PROJECT_SOURCE_DIR}/include/REGTree.h)
add_executable(test_merge test_Merge.cpp ${PROJECT_SOURCE_DIR}/src/FSA.cpp ${PROJECT_SOURCE_DIR}/include/FSA.h ${PROJECT_SOURCE_DIR}/src/NFA.cpp ${PROJECT_SOURCE_DIR}/include/NFA.h ${PROJECT_SOURCE_DIR}/src/DFA.cpp ${PROJECT_SOURCE_DIR}/include/DFA.h ${PROJECT_SOURCE_DIR}/src/State.cpp ${PROJECT_SOURCE_DIR}/include/State.h ${PROJECT_SOURCE_DIR}/src/Transition.cpp ${PROJECT_SOURCE_DIR}/include/Transition.h  ${PROJECT_SOURCE_DIR}/src/UniqueObject.cpp ${PROJECT_SOURCE_DIR}/include/UniqueObject.h)
add_executable(test_reg_to_nfa test_REGtoNFA.cpp ${PROJECT_SOURCE_DIR}/src/FSA.cpp ${PROJECT_SOURCE_DIR}/include/FSA.h ${PROJECT_SOURCE_DIR}/src/NFA.cpp ${PROJECT_SOURCE_DIR}/include/NFA.h ${PROJECT_SOURCE_DIR}/src/State.cpp ${PROJECT_SOURCE_DIR}/include/State.h ${PROJECT_SOURCE_DIR}/src/Transition.cpp ${PROJECT_SOURCE_DIR}/include/Transition.h ${PROJECT_SOURCE_DIR}/src/UniqueObject.cpp ${PROJECT_SOURCE_DIR}/include/UniqueObject.h ${PROJECT_SOURCE_DIR}/include/REGTree.h ${PROJECT_SOURCE_DIR}/src/REGTree.cpp ${PROJECT_SOURCE_DIR}/include/REG_to_NFA.h ${PROJECT_SOURCE_DIR}/src/REG_to_NFA.cpp)
add_executable(test_nfa_to_dfa test_NFAtoDFA.cpp ${PROJECT_SOURCE_DIR}/src/FSA.cpp ${PROJECT_SOURCE_DIR}/include/FSA.h ${PROJECT_SOURCE_DIR}/src/NFA.cpp ${PROJECT_SOURCE_DIR}/include/NFA.h ${PROJECT_SOURCE_DIR}/src/DFA.cpp ${PROJECT_SOURCE_DIR}/include/DFA.h ${PROJECT_SOURCE_DIR}/src/State.cpp ${PROJECT_SOURCE_DIR}/include/State.h ${PROJECT_SOURCE_DIR}/src/Transition.cpp ${PROJECT_SOURCE_DIR}/include/Transition.h ${PROJECT_SOURCE_DIR}/src/UniqueObject.cpp ${PROJECT_SOURCE_DIR}/include/UniqueObject.h ${PROJECT_SOURCE_DIR}/include/REGTree.h ${PROJECT_SOURCE_DIR}/src/REGTree.cpp ${PROJECT_SOURCE_DIR}/include/REG_to_NFA.h ${PROJECT_SOURCE_DIR}/src/REG_to_NFA.cpp  ${PROJECT_SOURCE_DIR}/include/NFA_to_DFA.h ${PROJECT_SOURCE_DIR}/src/NFA_to_DFA.cpp)
# add_executable(test_nfa_to_dfa test_NFAtoDFA.cpp ${PROJECT_SOURCE_DIR}/src/FSA.cpp ${PROJECT_SOURCE_DIR}/include/FSA.h ${PROJECT_SOURCE_DIR}/src/NFA.cpp ${PROJECT_SOURCE_DIR}/include/NFA.h ${PROJECT_SOURCE_DIR}/src/State.cpp ${PROJECT_SOURCE_DIR}/include/State.h ${PROJECT_SOURCE_DIR}/src/Transition.cpp ${PROJECT_SOURCE_DIR}/include/Transition.h ${PROJECT_SOURCE_DIR}/src/UniqueObject.cpp ${PROJECT_SOURCE_DIR}/include/UniqueObject.h ${PROJECT_SOURCE_DIR}/include/REGTree.h ${PROJECT_SOURCE_DIR}/src/REGTree.cpp ${PROJECT_SOURCE_DIR}/include/REG_to_NFA.h ${PROJECT_SOURCE_DIR}/src/REG_to_NFA.cpp  ${PROJECT_SOURCE_DIR}/include/NFA_to_DFA.h ${PROJECT_SOURCE_DIR}/src/NFA_to_DFA.cpp)

add_test(NAME "TestState" COMMAND test_state)
add_test(NAME "TestNFA" COMMAND test_nfa)
add_test(NAME "TestNFABuilder" COMMAND test_build)
add_test(NAME "TestREGTree" COMMAND test_regtree)
add_test(NAME "TestMerge" COMMAND test_merge)
add_test(NAME "TestREGtoNFA" COMMAND test_reg_to_nfa)
add_test(NAME "TestNFAtoDFA" COMMAND test_nfa_to_dfa)