include(CTest)

include_directories(${PROJECT_SOURCE_DIR}/include)
link_libraries(AllCompiler)

set (EXECUTABLE_OUTPUT_PATH exec)
add_executable(test_state test.cpp)
add_executable(test_nfa test_NFA.cpp)
add_executable(test_build test_build.cpp)
add_executable(test_regtree test_REGTree.cpp)
add_executable(test_merge test_Merge.cpp)
add_executable(test_reg_to_nfa test_REGtoNFA.cpp)
add_executable(test_nfa_to_dfa test_NFAtoDFA.cpp)
add_executable(test_remove_eps test_remove_eps.cpp)
add_executable(test_dfa_forest test_dfa_forest.cpp)
add_executable(test_dfa test_DFA.cpp)
add_executable(test_scanner test_scanner.cpp)
add_executable(test_tokens test_tokens.cpp)

add_test(NAME "TestState" COMMAND test_state)
add_test(NAME "TestNFA" COMMAND test_nfa)
add_test(NAME "TestNFABuilder" COMMAND test_build)
add_test(NAME "TestREGTree" COMMAND test_regtree)
add_test(NAME "TestMerge" COMMAND test_merge)
add_test(NAME "TestREGtoNFA" COMMAND test_reg_to_nfa)
add_test(NAME "TestNFAtoDFA" COMMAND test_nfa_to_dfa)
add_test(NAME "TestRemoveEpsilon" COMMAND test_remove_eps)
add_test(NAME "TestDFAForest" COMMAND test_dfa_forest)
add_test(NAME "TestDFA" COMMAND test_dfa)
add_test(NAME "TestScanner" COMMAND test_scanner)
add_test(NAME "TestTokens" COMMAND test_tokens)